<resources>
    <string name="error_act_label">未捕获异常</string>
    <string name="crash_info">崩溃信息：</string>
    <string name="class_name">类名：</string>
    <string name="method_name">法名：</string>
    <string name="line_number">行数：</string>
    <string name="error_type">类型：</string>
    <string name="crash_time">时间：</string>
    <string name="full_info">全部信息：</string>
    <string name="keep_today_file">保留今天的日志</string>
    <string name="delete_error_log_tip">删除日志</string>
    <string name="delete_error_log_msg">日志删除后无法复原，是否删除</string>
    <string name="delete_log_success">删除完成</string>
</resources>
