<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:showIn="@layout/activity_error_mcmo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crash_info" />

    <TextView
        android:id="@+id/tv_crash_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#fc468c" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name" />

        <TextView
            android:id="@+id/tv_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fc468c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/method_name" />

        <TextView
            android:id="@+id/tv_method_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fc468c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_number" />

        <TextView
            android:id="@+id/tv_line_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fc468c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_type" />

        <TextView
            android:id="@+id/tv_error_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fc468c" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crash_time" />

        <TextView
            android:id="@+id/tv_crash_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fc468c" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/full_info" />

    <TextView
        android:id="@+id/tv_full_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="#fc468c" />

</merge>